--- a/style.css
+++ b/style.css
@@ -1,5 +1,114 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 15px;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: space-between;
+}
+
+ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+h1, h2, h3, p {
+    padding: 0;
+    margin: 0;
+}
+
+.purple {
+    background-color: rgb(31, 31, 54);
+    display: flex;
     padding: 0px 150px;
+    color: white;
+}
+
+.purple p, a {
+    color: lightgray;
+}
+
+.header {
+    align-items: center;
+    justify-content: space-between;
+}
+
+.right-link {
+    display: flex;
+    gap: 20px;
+    flex-shrink: 0;
+}
+
+.hero {
+    align-items: flex-start;
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+
+.left-hero {
+    flex-direction: column;
+    flex: 1;
+    margin: 0;
+    padding: 0px 50px 0px 0px;
+}
+
+.placeholder {
+    background-color: rgb(109, 109, 128);
+    flex: 1;
+    display: flex;
+    height: 200px;
+    justify-content: center;
+    align-items: center;
+}
+
+.button {
+    color: white;
+    background-color: rgb(103, 91, 234);
+    width: 120px;
+    height: 40px;
+    margin: 10px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+}
+
+.body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.information {
+    padding: 50px 200px 100px 200px
+}
+
+.container {
+    display: flex;
+    gap: 50px;
+    margin-top: 50px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 130px;
+    gap: 5px;
+    text-align: center;
+}
+
+.square {
+    margin: auto;
+    width: 130px;
+    height: 130px;
+    border: 2px solid;
+    border-color: rgb(103, 91, 234);
+    border-radius: 10px;
 }
