--- a/style.css
+++ b/style.css
@@ -112,3 +112,16 @@ h1, h2, h3, p {
     border-color: rgb(103, 91, 234);
     border-radius: 10px;
 }
+
+.gray {
+    background-color: rgb(230, 230, 238);
+    padding: 100px 300px 80px 300px;
+    align-items: flex-end;
+}
+
+.quote {
+    font-style: italic;
+    font-size: 25px;
+    font-weight: lighter;
+    padding-bottom: 10px;
+}
